# Technion_CS_236349_Computer_Security_Project

./: .gitignore  Algorithm1  Attack_Algorithm_1.py  README.md  attack.sh  one_round_S5_S1.py  runnningAttacks.sh
ALG_1/: .cproject  .project  .project.sublime-workspace  New c File.c  main.c
Attack_Algorithm_1/: .gitignore  Attack_Algorithm_1.py  Attack_Algorithm_1_Wrapper.py  Calculate_Key_Round_Matrices.py  FIRST_data.txt  New.c  Output.txt  Prepare_Data.py  binary_to_hexadecimal.py  data.txt  file_for_testing.c  find_key_loc.py  first_output.txt  key_locations_20000x100.txt  key_locations_2000x20.txt  key_locations_3000x50.txt
Attack_Algorithm_2/: Attack_Algorithm_2.py  testing.py
Cpp/: .gitignore  Attack  AttackAlgorithm1.cpp  AttackAlgorithm1.h  AttackAlgorithm2.cpp  AttackAlgorithm2.h  AttackAlgorithm2FewLevels.cpp  AttackAlgorithm2FewLevels.h  Attack_1.cpp  Attack_1.h  CMakeLists.txt  DES_Encrypt.cpp  Data.h  (+12 more)
Cpp/Code/: AttackAlgorithm1.cpp  AttackAlgorithm2.cpp  AttackAlgorithm2.h  AttackAlgorithm2FewLevels.cpp  CMakeLists.txt  DES_Encrypt.h  DataUtils.cpp  RunningAttackUtil.cpp  RunningAttackUtil.h  main.cpp
Cpp/Code/cereal/details/: helpers.hpp  traits.hpp
Cpp/Code/cereal/types/: base_class.hpp  memory.hpp
Cpp/ShortTablesCode/: AttackAlgorithm2.h  CMakeLists.txt  RunningAttackUtil.cpp  ShortTablesAttackAlgorithm2FewLevels.cpp  ShortTablesAttackAlgorithm2FewLevels.h  Tables.cpp  Tables.h  main.cpp
Cpp/ShortTablesCode/cereal/archives/: binary.hpp
Cpp/ShortTablesCode/cereal/details/: static_object.hpp
Cpp/ShortTablesCode/cereal/types/: vector.hpp
(+709 files in other folders)
